--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: sbt
+
       - name: Run tests
         run: sbt test
