--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -12,7 +12,7 @@ on: push
 jobs:
   delete-artifacts:
     name: Delete Artifacts
-    runs-on: blacksmith-4vcpu-ubuntu-2404
+    runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
